--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <header class="container">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg fixed-top bg-light">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.png" alt="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -33,10 +33,10 @@
                             <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Backpack</a>
+                            <a class="nav-link" href="#Backpack">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
                     </ul>
                 </div>
@@ -190,7 +190,7 @@
         </section>
         <!-- Shoes section end  -->
         <!-- Backpack section start -->
-        <section class="container my-5">
+        <section class="container my-5" id="Backpack">
             <h1>Backpack</h1>
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                 <div class="col">
@@ -243,7 +243,7 @@
         <!-- Backpack section start  -->
         <!-- Subscribe section start  -->
         <section style="height: 300px;"
-            class="container rounded d-flex justify-content-center align-items-center bg-info">
+            class="container rounded d-flex justify-content-center align-items-center bg-info" id="Subscribe">
             <div>
                 <h2>LET'S STAY IN TOUCH</h2>
                 <p>Get updates on sales, specials and more</p>
@@ -251,7 +251,7 @@
                     <div class="mb-2">
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="submit" class="btn btn-warning">Submit</button>
                 </form>
             </div>
         </section>
